# course_project

./: CMakeLists.txt  json_parser.cpp  json_parser.h  main.cpp
.github/.workflows/: release.yml
.github/workflows/: release.yml
